name:                gloss-counter
version:             0.1.0.0
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gloss-counter
  main-is:             Main.hs
  other-modules:       Controller,
                       Model,
                       View
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       containers,
                       ghc
  hs-source-dirs:      src
  default-language:    Haskell2010